fix Listeo .text-content z-index being too high

--- a/public/css/listeo/custom.css
+++ b/public/css/listeo/custom.css
@@ -124,6 +124,10 @@ textarea:focus {
 }
 
 /* 03-shortcodes.css override */
+.text-content {
+  z-index: 100;
+}
+
 .listing-item-container {
   border-radius: 0;
   margin-bottom: 0;
